Support displaying multiple programmes
This updates the `AppPatientSearchResultCardComponent` to support
displaying multiple programmes which will be necessary to be able to use
this card when viewing all patients for a particular team.

Jira-Issue: MAV-2143

--- a/app/views/programmes/patients/index.html.erb
+++ b/app/views/programmes/patients/index.html.erb
@@ -34,7 +34,7 @@
         <%= render AppPatientSearchResultCardComponent.new(
               patient,
               link_to: patient_path(patient),
-              programme: @programme,
+              programmes: [@programme],
               academic_year: @academic_year,
               show_triage_status: @form.triage_status.present?,
               show_year_group: patient.show_year_group?(team: current_team),
