Add Dismiss link on Important notices table
This allows users to dismiss the notice once they have acknowledged it. It is only for notices that cannot be dismissed by fixing the issue, eg invalid records.

--- a/app/components/app_notices_table_component.html.erb
+++ b/app/components/app_notices_table_component.html.erb
@@ -11,6 +11,7 @@
         <% row.with_cell(text: "Date") %>
         <% row.with_cell(text: "Child") %>
         <% row.with_cell(text: "Notice") %>
+        <%= row.with_cell(text: "Actions") %>
       <% end %>
     <% end %>
 
@@ -29,6 +30,12 @@
             <span class="nhsuk-table-responsive__heading">Notice</span>
             <%= notice.message %>
           <% end %>
+            <% row.with_cell do %>
+              <span class="nhsuk-table-responsive__heading">Actions</span>
+              <% if notice.can_dismiss? %>
+                <%= link_to "Dismiss", dismiss_imports_notice_path(notice) %>
+              <% end %>
+            <% end %>
         <% end %>
       <% end %>
     <% end %>
