Don't show all patients until the first global search
Update the children page so that it only displays the 'Find Children box that exists currently. The children list should not appear until a search has been made. This should reduce performance issues when visiting this page for the first time.

MAV-2427

--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -16,16 +16,20 @@
   </div>
 
   <div class="app-grid-column-results">
-    <%= render AppSearchResultsComponent.new(@pagy, label: "children") do %>
-      <% @patients.each do |patient| %>
-        <%= render AppPatientSearchResultCardComponent.new(
-              patient,
-              link_to: patient_path(patient),
-              programmes: @form.programmes,
-              show_nhs_number: true,
-              show_school: true,
-            ) %>
+    <% if @search_params_present %>
+      <%= render AppSearchResultsComponent.new(@pagy, label: "children") do %>
+        <% @patients.each do |patient| %>
+          <%= render AppPatientSearchResultCardComponent.new(
+                patient,
+                link_to: patient_path(patient),
+                programmes: @form.programmes,
+                show_nhs_number: true,
+                show_school: true,
+              ) %>
+        <% end %>
       <% end %>
+    <% else %>
+       <%= render AppSearchResultsComponent.new(@pagy, label: "children", no_results_text: "Search for a child or use filters to see children matching your selection.") %>
     <% end %>
   </div>
 </div>
