--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -14,72 +14,38 @@
   <% end %>
 <% end %>
 
-<ul class="nhsuk-grid-row nhsuk-card-group">
-  <li class="nhsuk-grid-column-one-third nhsuk-card-group__item">
-    <%= render AppCardComponent.new(link_to: programmes_path) do |card| %>
-      <% card.with_heading(level: 2) { t("programmes.index.title") } %>
-      <p class="nhsuk-body">Use this area to:</p>
-      <ul class="nhsuk-list nhsuk-list--bullet">
-        <li>import child records</li>
-        <li>organise vaccination sessions</li>
-        <li>report vaccinations</li>
-      </ul>
-    <% end %>
-  </li>
-
-  <li class="nhsuk-grid-column-one-third nhsuk-card-group__item">
-    <%= render AppCardComponent.new(link_to: sessions_path) do |card| %>
-      <% card.with_heading(level: 2) { t("sessions.index.title") } %>
-      <p class="nhsuk-body">Use this area to:</p>
-      <ul class="nhsuk-list nhsuk-list--bullet">
-        <li>review consent responses</li>
-        <li>triage health records</li>
-        <li>record vaccinations</li>
-        <li>review session outcomes</li>
-      </ul>
-    <% end %>
-  </li>
-
-  <li class="nhsuk-grid-column-one-third nhsuk-card-group__item">
-    <%= render AppCardComponent.new(link_to: patients_path) do |card| %>
-      <% card.with_heading(level: 2) { t("patients.index.title") } %>
-      <p class="nhsuk-body">Use this area to:</p>
-      <ul class="nhsuk-list nhsuk-list--bullet">
-        <li>find child records</li>
-        <li>view child vaccinations</li>
-      </ul>
-    <% end %>
-  </li>
-</ul>
+<%= render dashboard_cards_partial %>
 
 <ul class="nhsuk-grid-row nhsuk-card-group">
-  <li class="nhsuk-grid-column-one-third nhsuk-card-group__item">
-    <%= render AppCardComponent.new(link_to: consent_forms_path, secondary: true) do |card| %>
-      <% card.with_heading(level: 2, size: "s") { t("consent_forms.index.title") } %>
-      <% card.with_description { "Review incoming consent responses that can’t be automatically matched" } %>
-    <% end %>
-  </li>
+  <% unless is_upload_only? %>
+    <li class="nhsuk-grid-column-one-third nhsuk-card-group__item">
+      <%= render AppCardComponent.new(link_to: consent_forms_path, secondary: true) do |card| %>
+        <% card.with_heading(level: 2, size: "s") { t("consent_forms.index.title") } %>
+        <% card.with_description { "Review incoming consent responses that can’t be automatically matched" } %>
+      <% end %>
+    </li>
 
-  <li class="nhsuk-grid-column-one-third nhsuk-card-group__item">
-    <%= render AppCardComponent.new(link_to: school_moves_path, secondary: true) do |card| %>
-      <% card.with_heading(level: 2, size: "s") { t("school_moves.index.title") } %>
-      <% card.with_description { "Review children who have moved schools" } %>
-    <% end %>
-  </li>
+    <li class="nhsuk-grid-column-one-third nhsuk-card-group__item">
+      <%= render AppCardComponent.new(link_to: school_moves_path, secondary: true) do |card| %>
+        <% card.with_heading(level: 2, size: "s") { t("school_moves.index.title") } %>
+        <% card.with_description { "Review children who have moved schools" } %>
+      <% end %>
+    </li>
 
-  <li class="nhsuk-grid-column-one-third nhsuk-card-group__item">
-    <%= render AppCardComponent.new(link_to: imports_path, secondary: true) do |card| %>
-      <% card.with_heading(level: 2, size: "s") { t("imports.index.title") } %>
-      <% card.with_description { "Import child, cohort and vaccination records and see important notices" } %>
-    <% end %>
-  </li>
+    <li class="nhsuk-grid-column-one-third nhsuk-card-group__item">
+      <%= render AppCardComponent.new(link_to: imports_path, secondary: true) do |card| %>
+        <% card.with_heading(level: 2, size: "s") { t("imports.index.title") } %>
+        <% card.with_description { "Import child, cohort and vaccination records and see important notices" } %>
+      <% end %>
+    </li>
 
-  <li class="nhsuk-grid-column-one-third nhsuk-card-group__item">
-    <%= render AppCardComponent.new(link_to: vaccines_path, secondary: true) do |card| %>
-      <% card.with_heading(level: 2, size: "s") { t("vaccines.index.title") } %>
-      <% card.with_description { "Add and edit vaccine batches" } %>
-    <% end %>
-  </li>
+    <li class="nhsuk-grid-column-one-third nhsuk-card-group__item">
+      <%= render AppCardComponent.new(link_to: vaccines_path, secondary: true) do |card| %>
+        <% card.with_heading(level: 2, size: "s") { t("vaccines.index.title") } %>
+        <% card.with_description { "Add and edit vaccine batches" } %>
+      <% end %>
+    </li>
+  <% end %>
 
   <li class="nhsuk-grid-column-one-third nhsuk-card-group__item">
     <%= render AppCardComponent.new(link_to: team_path, secondary: true) do |card| %>
