Fail import for duplicate NHS number or matching patients
Currently, we fail uploads which have the same NHS number repeated in the file, on import as part of the ProcessImportJob. However this state can also be achieved after the PDS search where two or more rows in the upload have the same NHS number in PDS. In these cases, we currently silently de-dupe and take one of the records only. We should instead fail the upload in these cases too.
It is possible for two rows in the upload, without NHS number, to both match the same patient in the database. We currently arbitrarily choose one of these rows and ignore the other to avoid conflicting import issues staged. We should instead fail the upload in these cases too.

MAV-2476

--- a/app/views/imports/show.html.erb
+++ b/app/views/imports/show.html.erb
@@ -74,7 +74,7 @@
   <% end %>
 <% end %>
 
-<% if import.rows_are_invalid? %>
+<% if import.rows_are_invalid? || import.changesets_are_invalid? %>
   <%= render AppImportErrorsComponent.new(errors: import.errors) do %>
     <p class="nhsuk-u-reading-width">
       The records cannot be uploaded due to errors in the CSV file.
