Return empty navigation items when no team
Also hides the global navigation completely when there are no
navigation items to avoid render empty containers.

This fixes an issue on the select team page where the navigation
would otherwise be shown and where we now can no longer display
the navigation as it is now dependent on the team.

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -34,7 +34,7 @@
     <% end %>
   </div>
 
-  <% if @show_navigation %>
+  <% if @show_navigation && @app_navigation_items.present? %>
     <nav class="nhsuk-header__navigation" aria-label="Menu">
       <div class="nhsuk-header__navigation-container nhsuk-width-container">
         <ul class="nhsuk-header__navigation-list">
