Rename MMR programme to MMRV
This renames the MMR programme internally to MMRV but doesn't change any
user facing pieces of content for now.

We know that the MMR programme is eventually going to be replaced by
MMRV, but there will be a period of time where both MMR and MMRV
vaccines are given to children. We've decided this will be the same
programme, so this rename to `mmrv` just helps to prepare for the
future and to avoid needing to migrate data in production later.

--- a/app/views/draft_consents/agree.html.erb
+++ b/app/views/draft_consents/agree.html.erb
@@ -25,7 +25,7 @@
       <% end %>
       <%= f.govuk_radio_button :response, "given_injection",
                                label: { text: "Yes, for the injected vaccine only" } %>
-    <% elsif @draft_consent.programme.mmr? %>
+    <% elsif @draft_consent.programme.mmrv? %>
       <%= f.govuk_radio_button :response, "given", label: { text: "Yes, they agree" }, link_errors: true do %>
         <%= f.govuk_radio_buttons_fieldset :without_gelatine,
                                            legend: { text: "Do they want their child to have a vaccine without gelatine?", size: "s" },
