Signed out|in -> logged out|in

--- a/app/views/layouts/_timeout_warning.html
+++ b/app/views/layouts/_timeout_warning.html
@@ -8,11 +8,11 @@
   data-turbo-permanent
 >
   <h2 class="nhsuk-heading-m" id="app-timeout-warning-title">
-    You will be signed out soon
+    You will be logged out soon
   </h2>
 
   <p class="nhsuk-body" aria-hidden="true">
-    For your security, you will be signed out in
+    For your security, you will be logged out in
     <span id="app-timeout-warning-timer">2 minutes</span>.
   </p>
 
@@ -22,11 +22,11 @@
     aria-live="polite"
     role="status"
   >
-    For your security, you will be signed out in
+    For your security, you will be logged out in
     <span id="app-timeout-warning-timer-accessible">2 minutes</span>.
   </p>
 
   <button type="submit" class="nhsuk-button nhsuk-u-margin-bottom-0" autofocus>
-    Stay signed in
+    Stay logged in
   </button>
 </dialog>
